Various fixes: Color contrast at $blue / Sidemenu photo offset fixed / Capabilities panel grid autofitting

--- a/gui/admin-gui/src/frontend/scss/midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/midpoint.scss
@@ -534,18 +534,30 @@ li.dropdown.user.user-menu {
   }
 }
 
-// capability buttons in resource details page
+// Capability resource view grid
+.evo-grid.grid {
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
 
+// Capability buttons in resource details page
 .btn-resource-capability {
-	min-width: 150px !important;
+	//min-width: 150px !important;
 	aspect-ratio: 4/3!important;
 	height: auto;
-	max-height:100px;
-	font-size: 12px;
+	max-height:120px;
+	font-size: 14px;
 
 	.icon-background {
 	  color: rgba(60, 141, 188, 0.1);
 	}
+
+	& i.fa-stack-2x {
+	  font-size:3.5rem;
+	}
+  & i.fa-stack-1x {
+    font-size: 1.35rem;
+  }
 }
 
 .btn-resource-capability:hover {
